customise naming format and zip when windows

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -6,3 +6,9 @@ builds:
       - windows
     goarch:
       - amd64
+archive:
+  name_template: "{{ .ProjectName }}_v{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+  format: tar.gz
+  format_overrides:
+    - goos: windows
+      format: zip
