--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -2,6 +2,10 @@
   name = "github.com/hashicorp/terraform"
   version = "0.11.7"
 
+[[constraint]]
+  name = "github.com/yieldr/go-auth0"
+  version = "v0.2.1"
+
 [prune]
   go-tests = true
   unused-packages = true
