--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,5 +1,5 @@
 builds:
-  - binary_template: "terraform-provider-auth0_v{{ .Version }}"
+  - binary: "terraform-provider-auth0_v{{ .Version }}"
     env:
       - CGO_ENABLED=0
     goos:
