--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -3,8 +3,8 @@
   version = "0.11.7"
 
 [[constraint]]
-  name = "github.com/yieldr/go-auth0"
-  version = "v1.0.1"
+  name = "gopkg.in/auth0.v1"
+  version = "v1.1.1"
 
 [prune]
   go-tests = true
