--- a/wercker.yml
+++ b/wercker.yml
@@ -31,4 +31,4 @@ release:
     - script:
         name: release
         code: |
-          curl -sL https://git.io/goreleaser | bash -s -- --skip-validate
+          curl -sL https://git.io/goreleaser | bash -s -- --skip-validate --release-notes=CHANGELOG.md
