don't test website yet

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ install:
 script:
   - make build
   - make testacc OPTS=-coverprofile=c.out
-  - make website-test
+  # - make website-test
 
 deploy:
   provider: script
