automate release notes from changelog

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,11 @@ install:
   - bash scripts/gogetcookie.sh
   # This script installs Code Climate test coverage reporter.
   # See: https://docs.codeclimate.com/docs/travis-ci-test-coverage
-  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-  - chmod +x ./cc-test-reporter
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > /home/travis/bin/cc-test-reporter
+  - chmod +x /home/travis/bin/cc-test-reporter
 
 before_script:
-  - ./cc-test-reporter before-build
+  - cc-test-reporter before-build
 
 script:
   - make build
@@ -31,11 +31,11 @@ script:
   # - make website-test
 
 after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
 deploy:
   provider: script
-  script: curl -sL https://git.io/goreleaser | bash -s -- --skip-validate --release-notes=CHANGELOG.md
+  script: bash scripts/release.sh $TRAVIS_TAG
   on:
     tags: true
 
