--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Build
 on: [push]
 jobs:
 
@@ -24,6 +24,10 @@ jobs:
 
     - name: Test
       run: make testacc OPTS=-coverprofile=c.out
+      env:
+        AUTH0_DOMAIN: ${{ secrets.AUTH0_DOMAIN }}
+        AUTH0_CLIENT_ID: ${{ secrets.AUTH0_CLIENT_ID }}
+        AUTH0_CLIENT_SECRET: ${{ secrets.AUTH0_CLIENT_SECRET }}
 
     - name: Send code coverage report
       uses: aktions/codeclimate-test-reporter@v1
