update badge and avoid running travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,8 +45,9 @@ deploy:
 
 branches:
   only:
-    - master
-    - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
+    - nobuild
+    # - master
+    # - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
 
 matrix:
   fast_finish: true
