--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -15,10 +15,10 @@ jobs:
           This issue is stale because it has been open 30 days with no activity.
           Stale issues will be closed after 5 days if no action is taken. If you
           think this issue should not be closed, remove the `stale` label.
-        exempt-issue-label: triage
+        exempt-issue-label: preserve
         stale-pr-label: stale
         stale-pr-message: |
           This PR has become stale as it has been open 30 days with no activity.
           Stale PRs will be closed after 5 days if no action is taken. If you
           think this PR should not be closed, remove the `stale` label.
-        exempt-pr-label: triage
+        exempt-pr-label: preserve
