--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,9 +8,9 @@ builds:
       - windows
     goarch:
       - amd64
-archive:
-  name_template: "{{ .ProjectName }}_v{{ .Version }}_{{ .Os }}_{{ .Arch }}"
-  format: tar.gz
-  format_overrides:
-    - goos: windows
-      format: zip
+archives:
+  - name_template: "{{ .ProjectName }}_v{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+    format: tar.gz
+    format_overrides:
+      - goos: windows
+        format: zip
