ignore *.md from triggering build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,10 @@ name: Build
 on: 
   push:
     branches: ['*']
-
+    paths-ignore:
+      - '**.md'
+      - 'example/**'
+      - 'website/**'
 jobs:
 
   build:
