use -mod=vendor flag and prefix for code coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ script:
   - make website-test
 
 after_script:
-  - cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - cc-test-reporter after-build --prefix github.com/alexkappa/terraform-provider-auth0 --exit-code $TRAVIS_TEST_RESULT
 
 deploy:
   provider: script
