allow client jwt scopes to be empty

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -2,6 +2,7 @@ builds:
   - binary: "terraform-provider-auth0_v{{ .Version }}"
     env:
       - CGO_ENABLED=0
+      - GOFLAGS=-mod=vendor
     goos:
       - darwin
       - linux
