--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ cache:
 
 env:
   - GO111MODULE=on
+  - GOFLAGS=-mod=vendor
 
 install:
   # This script is used by the Travis build to install a cookie for
