--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
       id: go
 
     - name: Determine version
-      run: echo ::set-env name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
+      run: echo ::set-env name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3 | sed -e "s/^v//")
     
     - name: Import GPG key
       id: gpg
