--- a/.github/workflows/sweep.yml
+++ b/.github/workflows/sweep.yml
@@ -9,4 +9,14 @@ jobs:
     name: Sweep
     runs-on: ubuntu-latest
     steps:
-    - run: make sweep
+    - name: Check out source
+      uses: actions/checkout@v2
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.14.1
+      id: go
+    - name: Set up Git cookies
+      run: bash scripts/gogetcookie.sh
+    - name: Sweep
+      run: make sweep
