--- a/.github/workflows/sweep.yml
+++ b/.github/workflows/sweep.yml
@@ -18,3 +18,7 @@ jobs:
       run: bash scripts/gogetcookie.sh
     - name: Sweep
       run: make sweep
+      env:
+        AUTH0_DOMAIN: ${{ secrets.AUTH0_DOMAIN }}
+        AUTH0_CLIENT_ID: ${{ secrets.AUTH0_CLIENT_ID }}
+        AUTH0_CLIENT_SECRET: ${{ secrets.AUTH0_CLIENT_SECRET }}
