Add missing resources for labelling

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,3 +1,11 @@
+resource/auth0_action:
+  - '**/*action.go'
+  - '**/*action_test.go'
+
+resource/auth0_branding:
+  - '**/*branding.go'
+  - '**/*branding_test.go'
+
 resource/auth0_client:
   - '**/*client.go'
   - '**/*client_test.go'
@@ -26,6 +34,10 @@ resource/auth0_global_client:
   - '**/*global_client.go'
   - '**/*global_client_test.go'
 
+resource/auth0_guardian:
+  - '**/*guardian.go'
+  - '**/*guardian_test.go'
+
 resource/auth0_hook:
   - '**/*hook.go'
   - '**/*hook_test.go'
@@ -33,6 +45,10 @@ resource/auth0_hook:
 resource/auth0_log_stream:
   - '**/*log_stream.go'
   - '**/*log_stream_test.go'
+
+resource/auth0_organization:
+  - '**/*organization.go'
+  - '**/*organization_test.go'
 
 resource/auth0_prompt:
   - '**/*prompt.go'
