Add trigger binding to labels

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -74,6 +74,10 @@ resource/auth0_tenant:
   - '**/*tenant.go'
   - '**/*tenant_test.go'
 
+resource/auth0_trigger_binding:
+  - '**/*trigger_binding.go'
+  - '**/*trigger_binding_test.go'
+
 resource/auth0_user:
   - '**/*user.go'
   - '**/*user_test.go'
