--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,16 +28,22 @@ jobs:
     - name: Build
       run: make build
 
+    - name: Start containers
+      run: docker-compose up -d --build
+
     - name: Test
       run: make testacc OPTS=-coverprofile=c.out
       env:
         AUTH0_DOMAIN: ${{ secrets.AUTH0_DOMAIN }}
         AUTH0_CLIENT_ID: ${{ secrets.AUTH0_CLIENT_ID }}
         AUTH0_CLIENT_SECRET: ${{ secrets.AUTH0_CLIENT_SECRET }}
-        DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
 
     - name: Send code coverage report
       uses: aktions/codeclimate-test-reporter@v1
       with:
         codeclimate-test-reporter-id: ${{ secrets.CC_TEST_REPORTER_ID }}
         command: after-build --prefix github.com/alexkappa/terraform-provider-auth0
+
+    - name: Stop containers
+      if: always()
+      run: docker-compose down
